# nf-rated

./: .gitignore  Cargo.toml  LICENSE  README.md  release.toml
.github/workflows/: rust.yml
resources/data/: netflix_titles.csv
src/: core.rs  db.rs  init_data.rs  lib.rs  main.rs  sync_ratings.rs  tui.rs  update_data.rs
src/data/: column_filter.rs  data_types.rs  db.rs  mod.rs  query_builder.rs  util.rs
src/render/: core.rs  mod.rs
src/render/components/: admin.rs  item_details.rs  log.rs  mod.rs  row_summary.rs  rows_summary.rs  util.rs
src/render/tui/: mod.rs  stateful_list.rs
src/sync/: mod.rs  sync_ratings.rs
