[package]
name = "nf-rated"
version = "0.1.0"
authors = ["Thorsten Lorenz <thlorenz@gmx.de>"]
edition = "2018"

default-run = "tui"

[features]
log = []

[dependencies]
rusqlite = "0.24.0"
csv = "1.1.3"
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
percent-encoding = "2.1.0"
tui = { version = "0.10.0", features = ["crossterm"] }
crossterm = "0.17.7"

[[bin]]
name="sync_ratings"
path= "bin/sync_ratings.rs"

[[bin]]
name="init_data"
path= "bin/init_data.rs"

[[bin]]
name="tui"
path= "bin/tui.rs"
