[package]
name = "nf-rated"
version = "0.1.0"
description = "Query Netflix movies sorted by their IMDB rating."
authors = ["Thorsten Lorenz <thlorenz@gmx.de>"]
edition = "2018"

repository = "https://github.com/thlorenz/nf-rated"
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "resources/data/netflix_titles.csv"]

license = "MIT"

[features]
log = []

[dependencies]
rusqlite = "0.24.0"
csv = "1.1.3"
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
percent-encoding = "2.1.0"
tui = { version = "0.10.0", features = ["crossterm"] }
crossterm = "0.17.7"
clap = "2.33.3"
app_dirs = "1.2.1"
